--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 </div>
                 <div class="scale-info" id="scaleInfo">Scale: C Major</div>
             </div>
+            <div id="stepHeader"></div>
             <div class="piano-grid" id="pianoGrid"></div>
         </div>
         <div class="presets">
