--- a/index.html
+++ b/index.html
@@ -44,11 +44,19 @@
                     <input type="range" class="slider" id="tempoSlider" min="60" max="180" value="128" />
                     <span class="value-display" id="tempoValue">128 BPM</span>
                 </div>
-                <div class="control-group">
-                    <span class="control-label">Octave</span>
-                    <input type="range" class="slider" id="octaveSlider" min="2" max="6" value="4" />
-                    <span class="value-display" id="octaveValue">C4</span>
-                </div>
+<div class="octave-controls">
+    <div class="octave-block">
+        <span class="control-label">Octave Min</span>
+        <input type="range" id="octaveMinSlider" min="1" max="6" value="3" />
+        <span id="octaveMinValue" class="value-display">3</span>
+    </div>
+    <div class="octave-block">
+        <span class="control-label">Octave Max</span>
+        <input type="range" id="octaveMaxSlider" min="2" max="7" value="5" />
+        <span id="octaveMaxValue" class="value-display">5</span>
+    </div>
+</div>
+
             </div>
             <div class="control-group">
                 <span class="control-label">Son</span>
